# lya_2pt

./: .coveragerc  .gitignore  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  python_package.yml
examples/: lyaxlya_cf.ini
lya_2pt/: __init__.py  _version.py  absorbers.py  compute_utils.py  constants.py  correlation.py  cosmo.py  defaults.py  distortion.py  errors.py  export.py  forest_healpix_reader.py  forest_reader.py  global_data.py  interface.py  optimal_estimator.py  output.py  read_io.py  test.py  tracer.py  tracer2_reader.py  tracer_utils.py  utils.py
lya_2pt/scripts/: run.py  run_cf.py  run_dmat.py  run_export.py  run_mpi.py
notebooks/: test_one_hp.ipynb  test_optimal_estimator.ipynb
notebooks/configs/: lyaxlya_cf.ini
tests/: __init__.py  test_cf.py
tests/configs/: lyaxlya_cf.ini
tutorials/: Tests.ipynb  lyaxlya_cf.ini
