[bumpversion]
current_version = 0.1.0
commit = True
tag = False

[bumpversion:file:lya_2pt/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = lya_2pt
version = attr: lya_2pt.__version__
author = Andrei Cuceu, Ignasi Pérez-Ràfols
author_email = andreicuceu@gmail.com
description = Package for computing 3D correlations from Lya forest and associated tracers
long_description = file: README.md
license = GNU General Public License v3.0
project_urls = 
	Bug Reports=https://github.com/igmhub/lya_2pt/issues
	Source=https://github.com/igmhub/lya_2pt

[options]
python_requires = >=3.9
install_requires = file: requirements.txt

[options.entry_points]
console_scripts = 
	lya-2pt = lya_2pt.scripts.run:main
	lya-2pt-mpi = lya_2pt.scripts.run_mpi:main
	lya-2pt-export = lya_2pt.scripts.run_export:main
	lya-2pt-cf = lya_2pt.scripts.run_cf:main
	lya-2pt-dmat = lya_2pt.scripts.run_dmat:main

[options.extras_require]
dev = 
	pytest
	flake8
	bump2version
